# gevent-signalrclient

./: .dockerignore  .editorconfig  .gitignore  Makefile  README.md  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
gevent_signalrclient/connection/: __init__.py  builder.py
gevent_signalrclient/messages/: __init__.py  handlers.py  subject.py
gevent_signalrclient/protocol/: __init__.py  json.py  msgpack.py
gevent_signalrclient/transport/: __init__.py  websocket.py
geventsignalrclient/: __version__.py  connection.py  exceptions.py
geventsignalrclient/connection/: __init__.py  builder.py
geventsignalrclient/messages/: __init__.py  handlers.py  subject.py
geventsignalrclient/protocol/: __init__.py  json.py  msgpack.py
geventsignalrclient/transport/: __init__.py  websocket.py
signalrcore/: exceptions.py  helpers.py  hub_connection_builder.py  subject.py
signalrcore/connection/: __init__.py  builder.py
signalrcore/hub/: auth_hub_connection.py  base_hub_connection.py  handlers.py
signalrcore/messages/: handlers.py  subject.py
signalrcore/protocol/: __init__.py  base_hub_protocol.py  json.py  messagepack_protocol.py  msgpack.py
signalrcore/transport/: __init__.py  websocket.py
signalrcore/transport/websockets/: reconnection.py  websocket_transport.py
test/: base_test_case.py  client_streaming_test.py  configuration_test.py  open_close_test.py  reconnection_test.py  send_auth_errors_test.py  send_auth_test.py  send_test.py  streaming_test.py
test/examples/: azure.py  chat.py  chat_auth.py  chat_exception.py  chat_manual_reconnect.py  chat_msgpack.py  client_stream.py  disconnect.py  stream.py
tests/: client_streaming_test.py  configuration_test.py  conftest.py  helpers.py  open_close_test.py  reconnection_test.py  send_auth_errors_test.py  send_auth_test.py  send_test.py  streaming_test.py  test_configuration.py  test_connection.py  test_send.py  test_streaming.py
tests/AspNetCoreExample/: docker-compose.yml
tests/SignalRSample/src/Hubs/: ChatHub.cs
