[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gevent-signalrcore"
dynamic = ["version"]
license = {text = 'MIT'}
description = "Gevent friendyl SignalR client"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "mandrewcito"},
    {name = "Mikael Göransson"}
]
maintainers = [
    {name = "Mikael Göransson"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = [
    "gevent",
    "websocket",
    "signalr",
    "signalrcore"
]

dependencies = [
    "gevent",
    "msgpack==1.1.0",
    "msgpack-types>=0.5.0",
    "requests>=2.22.0",
    "websocket-client[optional]>=1.7.0",
]

[dependency-groups]
build = ["hatch>=1.14.0", "hatch-vcs>=0.4.0"]
lint = [
    "ruff==0.11.7",
    "mypy>=1.13.0,<2.0.0",
    "types-gevent>=24.11.0.20250401",
    "types-requests>=2.32.0.20250328",
]
test = []
release = ["twine>=5.1.1,<6.0.0"]

[tool.uv]
default-groups = ["build", "test", "lint"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "signalrcore/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["signalrcore/"]
exclude = []
artifacts = []

[tool.hatch.build.targets.wheel]
include = ["signalrcore/"]
artifacts = []

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.custom]
[tool.hatch.build.targets.BuildFrontend.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "build",
]

[tool.ruff.lint]
ignore = ["E402", "E501", "E713", "E731", "E741", "UP031"]
select = ["E", "F", "W", "UP", "FA102", "I001"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "signalrcore",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__version__.py" = ["ALL"]

[tool.ruff.lint.isort.sections]
signalrcore = ["signalrcore"]

[tool.mypy]
# missing type stubs
ignore_missing_imports = true
python_version = "3.11"

[tool.hatch.envs.hatch-test]
default-args = ["locust/test"]
dependencies = []

[tool.hatch.envs.hatch-test.scripts]
run = [
    "cd signalrcore-containertestservers && docker-compose up -d",
    "make tests"
]

## CI testing

# Run all combinations: `hatch run test:all`
# Run single env: `hatch run +py=3.10 test:all`

[tool.hatch.envs.test]
template = "hatch-test"

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]

